--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <title>URL Shortener Microservice</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/styles.css" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Rubik" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bungee+Hairline|Cormorant+Garamond" rel="stylesheet">
     </head>
     <body>
         <h1>URL Shortener Microservice</h1>
